--- a/demo.ipynb
+++ b/demo.ipynb
@@ -59,13 +59,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'fields': [{'100': {'ind1': '1',\n",
+       "[{'fields': [{'008': '150804s2005    no ||||| |||||000|1|nob| '},\n",
+       "   {'100': {'ind1': '1',\n",
        "     'ind2': ' ',\n",
        "     'subfields': [{'a': 'Ibsen, Henrik'},\n",
        "      {'d': '1828-1906'},\n",
@@ -77,13 +78,9 @@
        "      {'p': 'Catilina (1850) ; Catilina (1875) ; Kjæmpehøien (1850) ; Kjæmpehøien (1854) ; Norma ; Sancthansnatten'},\n",
        "      {'n': '1K'},\n",
        "      {'p': 'Innledninger og kommentarer'},\n",
-       "      {'c': '[det redaksjonelle arbeidet er utført av: Vigdis Ystad, Asbjørn Aarseth]'}]}},\n",
-       "   {'260': {'ind1': ' ',\n",
-       "     'ind2': ' ',\n",
-       "     'subfields': [{'a': 'Oslo'},\n",
-       "      {'b': '[Universitetet i Oslo]'},\n",
-       "      {'c': '2005'}]}}]},\n",
-       " {'fields': [{'100': {'ind1': '1',\n",
+       "      {'c': '[det redaksjonelle arbeidet er utført av: Vigdis Ystad, Asbjørn Aarseth]'}]}}]},\n",
+       " {'fields': [{'008': '150605s1856    xx#||||| |||||000|u|nob| '},\n",
+       "   {'100': {'ind1': '1',\n",
        "     'ind2': ' ',\n",
        "     'subfields': [{'a': 'Ibsen, Henrik'},\n",
        "      {'d': '1828-1906'},\n",
@@ -91,11 +88,9 @@
        "   {'245': {'ind1': '1',\n",
        "     'ind2': '0',\n",
        "     'subfields': [{'a': 'Sang ianledning Hr. Skibsfører Jan Andersens og Jomfru M.B. Campbells Bryllupsfest den 25de September 1856'},\n",
-       "      {'c': 'forfattet til Brylluppet af Henrik Ibsen'}]}},\n",
-       "   {'260': {'ind1': ' ',\n",
-       "     'ind2': ' ',\n",
-       "     'subfields': [{'a': '[S.l.]'}, {'b': '[s.n.]'}, {'c': '[1856]'}]}}]},\n",
-       " {'fields': [{'100': {'ind1': '1',\n",
+       "      {'c': 'forfattet til Brylluppet af Henrik Ibsen'}]}}]},\n",
+       " {'fields': [{'008': '150605s2005    no |||||||||||000|d|nob| '},\n",
+       "   {'100': {'ind1': '1',\n",
        "     'ind2': ' ',\n",
        "     'subfields': [{'a': 'Ibsen, Henrik'},\n",
        "      {'d': '1828-1906'},\n",
@@ -105,11 +100,9 @@
        "     'ind2': '0',\n",
        "     'subfields': [{'a': 'Gjengangere :'},\n",
        "      {'b': 'et familiedrama i tre akter (1881)'},\n",
-       "      {'c': 'av Henrik Ibsen'}]}},\n",
-       "   {'260': {'ind1': ' ',\n",
-       "     'ind2': ' ',\n",
-       "     'subfields': [{'a': '[Oslo]'}, {'b': 'Riksteatret'}, {'c': '2005'}]}}]},\n",
-       " {'fields': [{'100': {'ind1': '1',\n",
+       "      {'c': 'av Henrik Ibsen'}]}}]},\n",
+       " {'fields': [{'008': '150605s2001    no |||||||||||000|d|nob| '},\n",
+       "   {'100': {'ind1': '1',\n",
        "     'ind2': ' ',\n",
        "     'subfields': [{'a': 'Ibsen, Henrik'},\n",
        "      {'d': '1828-1906'},\n",
@@ -119,13 +112,9 @@
        "     'ind2': '3',\n",
        "     'subfields': [{'a': 'En folkefiende :'},\n",
        "      {'b': 'skuespill i fem akter'},\n",
-       "      {'c': 'av Henrik Ibsen ; bearbeidet av Terje Mærli'}]}},\n",
-       "   {'260': {'ind1': ' ',\n",
-       "     'ind2': ' ',\n",
-       "     'subfields': [{'a': '[Bergen]'},\n",
-       "      {'b': 'Den nationale scene'},\n",
-       "      {'c': '2001'}]}}]},\n",
-       " {'fields': [{'100': {'ind1': '1',\n",
+       "      {'c': 'av Henrik Ibsen ; bearbeidet av Terje Mærli'}]}}]},\n",
+       " {'fields': [{'008': '150119s1937    xx#||||| |||||000|u|nob|d'},\n",
+       "   {'100': {'ind1': '1',\n",
        "     'ind2': ' ',\n",
        "     'subfields': [{'a': 'Ibsen, Henrik'},\n",
        "      {'d': '1828-1906'},\n",
@@ -134,13 +123,10 @@
        "     'ind2': '0',\n",
        "     'subfields': [{'a': 'Samlede digterverker'},\n",
        "      {'n': '3'},\n",
-       "      {'p': 'De unges forbund ; Kejser og galilæer'}]}},\n",
-       "   {'260': {'ind1': ' ',\n",
-       "     'ind2': ' ',\n",
-       "     'subfields': [{'a': 'Oslo'}, {'b': 'Gyldendal'}, {'c': '1937'}]}}]}]"
+       "      {'p': 'De unges forbund ; Kejser og galilæer'}]}}]}]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
